tests/baselines/reference/protectedClassPropertyAccessibleOnUnion1.errors.txt
protectedClassPropertyAccessibleOnUnion1.ts(17,26): error TS2339: Property 'pro' does not exist on type 'Baz | Qwe'.


==== protectedClassPropertyAccessibleOnUnion1.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/59289
    
    class Foo {
      protected pro: number;
    
      constructor(foo?: Foo | Bar) {
        this.pro = foo ? foo.pro + 1 : Math.random();
      }
    }
    
    class Bar extends Foo {}
    
    class Baz {
      protected pro: number;
    
      constructor(arg?: Baz | Qwe) {
        this.pro = arg ? arg.pro + 1 : Math.random(); // error
                             ~~~
!!! error TS2339: Property 'pro' does not exist on type 'Baz | Qwe'.
      }
    }
    
    class Qwe {
      protected pro: number = 42;
    }
    
    // https://github.com/microsoft/TypeScript/issues/46049
    
    export class A {
      protected bar(): void {}
      baz() {
        const unionRef: this | A = this;
        unionRef.bar();
      }
    }
    